[tool.poetry]
name = "orm-bridge"
version = "0.1.0"
description = ""
authors = ["timoniq", "nomilkinmyhome"]
license = "MIT"
readme = "README.md"
packages = [{include = "orm_bridge"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
isort = "^5.11.2"
ormar = "^0.12.0"
tortoise-orm = "^0.19.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
